Endpoint for openapi schema
